`ExerciseDetails`: video & form side by side on desktop

--- a/app/app/_components/Video/Video.scss
+++ b/app/app/_components/Video/Video.scss
@@ -11,4 +11,8 @@ video, iframe {
   @include tablet {
     max-height: $max-hero-height--tablet;
   }
+
+  @include desktop {
+    width: calc(100% - $form-width--tablet - $spacing--tablet);
+  }
 }
