--- a/app/app/_styles/_globals.scss
+++ b/app/app/_styles/_globals.scss
@@ -58,6 +58,15 @@ ul {
     @include flex-mixin--row(100%);
     align-items: flex-start;
   }
+
+  &--desktop {
+    @include flex-mixin--column(100%);
+    @include component-spacing;
+    @include desktop {
+      @include flex-mixin--row(100%);
+      align-items: flex-start;
+    }
+  }
 }
 
 .responsive-column--50 {
