`SwapExercise`: Add tag w/ body region

--- a/app/app/_styles/_variables.scss
+++ b/app/app/_styles/_variables.scss
@@ -3,6 +3,7 @@ $desktop-breakpoint: 1280px;
 
 
 $turquoise: #C7EFEF;
+$turquoise-40: #E7F7F7;
 $dark-blue: #142541;
 $secondary-text-color: #667183;
 $button-text-color: white;
