--- a/app/app/_components/SwapExercise/SwapExercise.scss
+++ b/app/app/_components/SwapExercise/SwapExercise.scss
@@ -7,6 +7,11 @@
   display: none;
 }
 
-.collapsible__header {
-  background-color: $turquoise;
+.collapsible {
+  &__header {
+    &--current {
+      text-decoration: underline;
+      text-underline-offset: .25rem;
+    }
+  }
 }
