`SwapExercise` Allow any # of sections to be expanded w/ arrow click
Apply styling

--- a/app/app/_styles/_variables.scss
+++ b/app/app/_styles/_variables.scss
@@ -5,11 +5,12 @@ $desktop-breakpoint: 1280px;
 $turquoise: #C7EFEF;
 $turquoise-40: #E7F7F7;
 $dark-blue: #142541;
+$dark-blue-shadow: rgba(20, 37, 65, 0.4);
 $secondary-text-color: #667183;
 $button-text-color: white;
 $off-white: #FDFDFD;
 $divider: 2px solid #727C8D;
-$input-border: 1px solid $secondary-text-color;
+$input-border: 1px solid #D0D3D9;
 $tag-text-color: $off-white;
 
 $font-family: 'Graphik Medium', 'Circular Air Book', 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
