--- a/app/app/_components/SwapExercise/SwapExercise.scss
+++ b/app/app/_components/SwapExercise/SwapExercise.scss
@@ -4,23 +4,41 @@
 
 $collapsible-header-height: 3rem;
 
+.exercise-list {
+  gap: 0;
+
+  &__section {
+    border-bottom: $input-border;
+    gap: 0;
+  }
+}
+
 .hidden {
   display: none;
 }
 
 .collapsible {
-  padding: $form-padding--mobile;
+  padding: 0;
 
   &__header {
     @include flex-mixin--row(100%);
     height: $collapsible-header-height; 
-    background-color: pink;
+    padding: 0;
+
+    &:hover {
+      background-color: $turquoise-40;
+    }
      
     &--current {
       @extend .collapsible__header;
       text-decoration: underline;
       text-underline-offset: .25rem;
     }
+  }
+
+  &__body {
+    padding: .5rem 1rem 1rem;
+    box-shadow: inset 0 .125rem .25rem $dark-blue-shadow;
   }
 
   &__title {
@@ -32,10 +50,14 @@ $collapsible-header-height: 3rem;
     width: 1.5rem;
     position: absolute;
     top: calc($collapsible-header-height / 2);
+    transform: translateY(-50%);
     right: 0;
+    border-radius: .25rem ;
+    perspective: 1000px;
 
     &:hover {
-      background-color: $turquoise-40;
+      box-shadow: .1875rem .1875rem .1875rem $dark-blue-shadow;
+      transition: transform 0.5s;
     }
   }
 }
