--- a/app/app/_components/SwapExercise/SwapExercise.scss
+++ b/app/app/_components/SwapExercise/SwapExercise.scss
@@ -26,7 +26,7 @@ $collapsible-header-height: 3rem;
     padding: 0;
 
     &:hover {
-      background-color: $turquoise-40;
+      background-color: $dark-blue-10;
     }
      
     &--current {
@@ -37,12 +37,20 @@ $collapsible-header-height: 3rem;
   }
 
   &__body {
-    padding: .5rem 1rem 1rem;
     box-shadow: inset 0 .125rem .25rem $dark-blue-shadow;
   }
 
   &__title {
     margin: 0;
+  }
+
+  &__list-item {
+    margin: 0;
+    padding: 0.5em 1rem;
+    &:hover {
+      background-color: $turquoise-40;
+      box-shadow: inset 0 0 .5rem $dark-blue-shadow--light;
+    }
   }
 
   &__arrow {
