--- a/app/app/_styles/_variables.scss
+++ b/app/app/_styles/_variables.scss
@@ -5,12 +5,15 @@ $desktop-breakpoint: 1280px;
 $turquoise: #C7EFEF;
 $turquoise-40: #E7F7F7;
 $dark-blue: #142541;
+$dark-blue-20: #D0D3D9;
+$dark-blue-10: #E6E7EA;
 $dark-blue-shadow: rgba(20, 37, 65, 0.4);
+$dark-blue-shadow--light: rgba(20, 37, 65, 0.2);
 $secondary-text-color: #667183;
 $button-text-color: white;
 $off-white: #FDFDFD;
 $divider: 2px solid #727C8D;
-$input-border: 1px solid #D0D3D9;
+$input-border: 1px solid $dark-blue-20;
 $tag-text-color: $off-white;
 
 $font-family: 'Graphik Medium', 'Circular Air Book', 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
