--- a/app/app/_styles/_variables.scss
+++ b/app/app/_styles/_variables.scss
@@ -9,6 +9,7 @@ $dark-blue-20: #D0D3D9;
 $dark-blue-10: #E6E7EA;
 $dark-blue-shadow: rgba(20, 37, 65, 0.4);
 $dark-blue-shadow--light: rgba(20, 37, 65, 0.2);
+$box-shadow: .1875rem .1875rem .5rem $dark-blue-shadow;
 $secondary-text-color: #667183;
 $button-text-color: white;
 $off-white: #FDFDFD;
