--- a/app/app/_styles/_globals.scss
+++ b/app/app/_styles/_globals.scss
@@ -123,6 +123,11 @@ h2, h3, h4, h5 {
   font-size: 1.25rem;
 }
 
+.modal-heading {
+  @extend .headline4;
+  margin-bottom: 2rem;
+}
+
 .subtitle {
   font-size: 1rem;
   font-family: $font-family--secondary;
