--- a/app/app/_components/SwapExercise/SwapExercise.scss
+++ b/app/app/_components/SwapExercise/SwapExercise.scss
@@ -65,18 +65,12 @@ $collapsible-header-height: 3rem;
   }
 
   &__arrow {
-    cursor: pointer;
+    @include icon--hover;
     width: 1.5rem;
     position: absolute;
     top: calc($collapsible-header-height / 2);
     transform: translateY(-50%);
     right: 0;
     border-radius: .25rem ;
-    perspective: 1000px;
-
-    &:hover {
-      box-shadow: $box-shadow;
-      transition: transform 0.5s;
-    }
   }
 }
