--- a/app/app/_styles/_variables.scss
+++ b/app/app/_styles/_variables.scss
@@ -5,12 +5,15 @@ $desktop-breakpoint: 1280px;
 $turquoise: #C7EFEF;
 $turquoise-40: #E7F7F7;
 $dark-blue: #142541;
+$dark-blue-80: #435067;
+$dark-blue-60: #667183;
+$dark-blue-40: #A0A7B2;
 $dark-blue-20: #D0D3D9;
 $dark-blue-10: #E6E7EA;
 $dark-blue-shadow: rgba(20, 37, 65, 0.4);
 $dark-blue-shadow--light: rgba(20, 37, 65, 0.2);
 $box-shadow: .1875rem .1875rem .5rem $dark-blue-shadow;
-$secondary-text-color: #667183;
+$secondary-text-color: $dark-blue-60;
 $button-text-color: white;
 $off-white: #FDFDFD;
 $divider: 2px solid #727C8D;
