--- a/app/app/_components/SwapExercise/SwapExercise.scss
+++ b/app/app/_components/SwapExercise/SwapExercise.scss
@@ -7,8 +7,8 @@ $collapsible-header-height: 3rem;
 .exercise-list {
   @include modal-mixin;
   gap: 0;
-  min-width: 50%;
-
+  width: 32.5rem;
+  
   &__section {
     border-bottom: $input-border;
     gap: 0;
