Increase y padding to modal to account for iPhone viewing

--- a/app/_components/FilterMenu/FilterMenu.scss
+++ b/app/_components/FilterMenu/FilterMenu.scss
@@ -8,7 +8,7 @@
 
   &__button {
     position: fixed;
-    bottom: $spacing--tablet;
+    bottom: $padding-bottom--mobile;
     width: $filter-menu-content-width;
     box-sizing: border-box;
     color: white;
