Position modal close icon to be fixed + w/in padding-top--mobile

--- a/app/_components/CloseIcon/CloseIcon.scss
+++ b/app/_components/CloseIcon/CloseIcon.scss
@@ -3,6 +3,9 @@
 @use '../../_styles/mixins' as *;
 
 .close-icon {
+  position: fixed;
   width: .875rem;
+  top: $padding-top--mobile;
   cursor: pointer;
+  transform: translateX(-100%);
 }
