--- a/app/_styles/_globals.scss
+++ b/app/_styles/_globals.scss
@@ -24,7 +24,7 @@ h1 {
 .main {
   @include flex-mixin--column(100%);
   @include component-spacing;
-  padding: $page-margin--mobile $page-margin--mobile $page-margin--tablet;
+  padding: $padding-top--mobile $page-margin--mobile $padding-bottom--mobile;
   background-color: $off-white;
   height: $main-height--mobile;
   justify-content: flex-start;
@@ -207,10 +207,4 @@ p {
 .no-spacing {
   margin: 0;
   padding: 0;
-}
-
-.modal-top {
-  @include flex-mixin--row(100%);
-  align-items: flex-start;
-  justify-content: space-between;
 }
