Centre login form for desktop

--- a/app/globals.scss
+++ b/app/globals.scss
@@ -15,4 +15,8 @@
   @include tablet {
     padding: $page-margin--tablet;
   }
+  @include desktop {
+    width: $form-width--tablet;
+    margin: 0 auto;
+  }
 }
