+ background color to login page video; increase mobile bottom-padding

--- a/app/globals.scss
+++ b/app/globals.scss
@@ -38,6 +38,7 @@
     margin: 3rem 0;
     width: 100%;
     aspect-ratio: auto;
+    background-color: $dark-blue;
 
     @include tablet {
       max-height: $max-hero-height--tablet;
