Add `FormErrorNotifications()` to `FormField()`

--- a/app/_styles/_variables.scss
+++ b/app/_styles/_variables.scss
@@ -3,6 +3,7 @@ $desktop-breakpoint: 1280px;
 
 
 $turquoise: #C7EFEF;
+$turquoise-20: #F2FAFA;
 $turquoise-40: #E7F7F7;
 $dark-blue: #142541;
 $dark-blue-80: #435067;
