Add logout icon to nav bar
- Add hover text to nav bar icons
- Update style of logout button on `/dashboard`

--- a/app/_components/Button/Button.scss
+++ b/app/_components/Button/Button.scss
@@ -18,6 +18,13 @@
     width: $button-width--tablet;
   }
 
+  &--white {
+    // @extend .button;
+    background-color: $off-white;
+    color: $dark-blue;
+    border: 1px solid $dark-blue;
+  }
+
   &--activity-form {
     @include tablet {
       width: 100%;
