--- a/app/_styles/_fonts.scss
+++ b/app/_styles/_fonts.scss
@@ -7,3 +7,8 @@
     font-family: 'Circular Air Book';
     src: url('../_assets/fonts/CircularAir-Book.ttf') format('truetype');
 }
+
+@font-face {
+    font-family: 'Futura PT Light';
+    src: url('../_assets/fonts/FuturaPT-Light.otf') format('opentype');
+}
