--- a/app/_styles/_globals.scss
+++ b/app/_styles/_globals.scss
@@ -46,6 +46,10 @@ h1 {
     @extend .main;
     top: 0;
     height: calc(100vh - $footer-height);
+
+    & p, i {
+      @extend .responsive-p;
+    }
   }
 }
 
@@ -178,6 +182,13 @@ p {
 
 .p2 {
   font-size: .75rem;
+}
+
+.responsive-p {
+  font-size: .875rem;
+  @include tablet {
+    font-size: 1.3125rem;
+  }
 }
 
 a {
