--- a/app/(jobs)/wealthsimple-85847/wealthsimple.scss
+++ b/app/(jobs)/wealthsimple-85847/wealthsimple.scss
@@ -44,4 +44,6 @@ p {
   border-radius: 16px;
   inset: 0px;
   box-shadow: rgba(0, 0, 0, 0.06) 0px 2px 8px 0px, rgba(0, 0, 0, 0.04) 0px 2px 8px 0px;
+  justify-content: center;
+  align-items: center;
 }
